syntax = "proto3";

import "google/protobuf/timestamp.proto";

package Worker;

service WorkerService {
  rpc create (NewJobParams) returns (JobResponse) {}
  rpc search (SearchJobsParams) returns (JobsResponse) {}
  rpc updateById (UpdateJobParams) returns (JobResponse) {}
}

message JobProperties {
  string id = 1;
  string name = 2;
  string state = 3;
  string module = 4;
  string data = 5;
  string note = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Service - Method's responses
message JobResponse {
  bool isSuccess = 1;
  string message = 2;
  JobProperties data = 3;
}
message JobsData {
  repeated JobProperties data = 1;
  int32 total = 2;
}
message JobsResponse {
  bool isSuccess = 1;
  string message = 2;
  JobsData data = 3;
}

// Service - Params
message JobIdParams {
  string id = 1;
}
message NewJobParams {
  string name = 1;
  string state = 2;
  string module = 3;
  string note = 4;
  string data = 5;
}
message SearchJobsParams {
  string name = 1;
  int32 page = 2;
  int32 size = 3;
  string state = 4;
  string module = 5;
}
message UpdateJobParams {
  int32 state = 1;
  string data = 2;
  string note = 3;
}